2011-03-15  Jeffrey Stedfast  <fejj@novell.com>

	* mono/SignatureValidity.custom: 
	* mono/DecryptionResult.custom:
	* mono/CryptoRecipient.custom: 
	* mono/Signer.custom: New custom sources implementing enumerators
	for Signers and Recipients.

2011-03-14  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Check for glib-sharp-2.0 instead of gtk-sharp-2.0
	since we really only depend on glib-sharp. Also check for gapi-2.0
	via pkgconfig.

2011-03-07  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.6

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_signer_info): Treat
	EXPSIG, EXPKEYSIG, and REVKEYSIG the same as GOODSIG/BADSIG status
	messages in that all of them denote a new signer info.

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.5

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	Implements features requested in bug #641841 and #641320.

	* gmime/gmime-crypto-context.h (GMimeCryptoHash): Reordered to be
	identical to gnupg's listing.
	(GMimeCryptoPubKeyAlgo): Same.

	* gmime/gmime-crypto-context.c (g_mime_decryption_result_[g,s]et_cipher):
	New functions to get/set the cipher algorithm used.
	(g_mime_decryption_result_[g,s]et_mdc): New functions to get/set
	the mdc digest algorithm used.

	* gmime/gmime-gpg-context.c (gpg_hash_algo): Removed, no longer
	needed.
	(gpg_pubkey_algo): Same.
	(gpg_ctx_parse_status) :Parse the DECRYPTION_INFO status to get
	the cipher and mdc algorithms used.
	(gpg_decrypt): Set the cipher and mdc values on the
	GMimeDecryptionResult.

	* gmime/gmime-pkcs7-context.c (pkcs7_pubkey_algo): Removed, no
	longer needed.
	(pkcs7_hash_algo): Same.

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_signer_info): Make sure
	to extract the pubkey_algo, hash_algo, sig_class, sig_expires, and
	return-code values for ERRSIG.

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>
