@@ -1,44 +1,3 @@
-		[DllImport("gmime")]
-		static extern IntPtr g_mime_decryption_result_get_recipients(IntPtr raw);
-
-		public IEnumerator Recipients {
-			get { return new GMimeCryptoRecipientIterator (this); }
-		}
-
-		internal class GMimeCryptoRecipientIterator : IEnumerator {
-			GMime.CryptoRecipient recipient;
-			GMime.DecryptionResult result;
-			int index = -1;
-
-			public GMimeCryptoRecipientIterator (GMime.DecryptionResult result)
-			{
-				this.result = result;
-			}
-			
-			public object Current {
-				get { return recipient; }
-			}
-			
-			public void Reset ()
-			{
-				recipient = null;
-				index = -1;
-			}
-			
-			public bool MoveNext ()
-			{
-				IntPtr rv;
-				
-				if (index == -1) {
-					rv = g_mime_decryption_result_get_recipients (result.Handle);
-					if (rv != IntPtr.Zero)
-						recipient = (GMime.CryptoRecipient) GLib.Opaque.GetOpaque (rv, typeof (GMime.CryptoRecipient), false);
-				} else {
-					recipient = recipient.Next ();
-				}
-				
-				index++;
-				
-				return recipient != null;
-			}
+		public CryptoRecipientCollection Recipients {
+			get { return new CryptoRecipientCollection (this); }
 		}
