@@ -1,44 +1,3 @@
-		[DllImport("gmime")]
-		static extern IntPtr g_mime_signature_validity_get_signers(IntPtr raw);
-
-		public IEnumerator Signers {
-			get { return new GMimeSignerIterator (this); }
-		}
-
-		internal class GMimeSignerIterator : IEnumerator {
-			GMime.SignatureValidity validity;
-			GMime.Signer signer;
-			int index = -1;
-
-			public GMimeSignerIterator (GMime.SignatureValidity validity)
-			{
-				this.validity = validity;
-			}
-			
-			public object Current {
-				get { return signer; }
-			}
-			
-			public void Reset ()
-			{
-				signer = null;
-				index = -1;
-			}
-			
-			public bool MoveNext ()
-			{
-				IntPtr rv;
-				
-				if (index == -1) {
-					rv = g_mime_signature_validity_get_signers (validity.Handle);
-					if (rv != IntPtr.Zero)
-						signer = (GMime.Signer) GLib.Opaque.GetOpaque (rv, typeof (GMime.Signer), false);
-				} else {
-					signer = signer.Next ();
-				}
-				
-				index++;
-				
-				return signer != null;
-			}
+		public SignerCollection Signers {
+			get { return new SignerCollection (this); }
 		}
