@@ -1,3 +1,13 @@
+2011-03-16  Jeffrey Stedfast  <fejj@novell.com>
+
+	* mono/CryptoRecipientCollection.cs:
+	* mono/SignerCollection.cs: New collections for Signers and
+	CryptoRecipients.
+
+	* mono/SignatureValidity.custom:
+	* mono/DecryptionResult.custom: Don't return IEnumerators for
+	signers/recipients, return the appropriate Collections instead.
+
 2011-03-15  Jeffrey Stedfast  <fejj@novell.com>
 
 	* mono/SignatureValidity.custom: 
